src/renderer/styles/app/partials/layout.less
/* ... */
.torrent.progress label {
    position: absolute;
    width: 100%;
    height: 100%;
    line-height: 1.75em;
    text-align: center;
    z-index: 1;
    color: rgba(255, 255, 255, .9);
    font-weight: 700;
}
.torrent.progress .bar {
    min-width: 0;
    width: 100%;
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;

    &.idle {
        transition: none;
    }
}
.torrent.sort.label {
    float: right;
    border-radius: 25px;
}
.torrent.context.menu {
    display: none;
    position: absolute;
}
.torrent.context.menu .ui.vertical.menu {
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.15);
}
.overlay {
    position: absolute;
    background-color: @overlayBackground;
    height: 100%;
    width: 100%;
}

.server.list {
    max-height: 65vh;
    overflow-y: scroll;
}

.meta.text {
    color: #888888;
    font-style: italic;
}
.ui.inverted.solid.dimmer {
    background-color: @pageBackground;
}
.transparent.overlay {
    background-color: rgba(0, 0, 0, 0.75);
}
.narrow.column {
    max-width: 450px;
}
.ui.stretched.segment {
    overflow: hidden;
    position: absolute;
    display: block;
    height: auto;
    bottom: 0;
    top: 0;
    left: 0;
    right: 0;
    margin: 10vmin;
    padding: 0px;
}
.menu .item .checkbox {
    float: right;
    margin: 0 0 0 .5em;
    width: 1.18em;
}

::-webkit-scrollbar {
    background: none;
    -webkit-appearance: none;
    width: 7px;
    height: 7px;
}
::-webkit-scrollbar-thumb {
    border-radius: 4px;
    background-color: rgba(0,0,0,.5);
    -webkit-box-shadow: 0 0 1px rgba(255,255,255,.5);
}
::-webkit-scrollbar * {
    background:transparent;
}

/*#########################################*/
/* Overlay Animation */
/*#########################################*/

.overlay.ng-hide-add, .overlay.ng-hide-remove {
    /* this is required as of 1.3x to properly
    apply all styling in a show/hide animation */
    -webkit-transition: 0.10s cubic-bezier(.24, .78, .35, .99) all;
}
.overlay.ng-hide-add-active, .overlay.ng-hide-remove-active {
    /* the transition is defined in the active class */
    -webkit-transition: 0.10s cubic-bezier(.24, .78, .35, .99) all;
}
.overlay.ng-hide-add {
    opacity: 1;
    transform: scale(1.0);
}
.overlay.ng-hide-add.ng-hide-add-active {
    opacity: 0;
    transform: scale(1.1);
}
.overlay.ng-hide-remove {
    opacity: 0;
    transform: scale(1.1);
}
.overlay.ng-hide-remove.ng-hide-remove-active {
    opacity: 1;
    transform: scale(1.0);
}

/*#########################################*/
/* Forms */
/*#########################################*/

.ui .form .fields .field {
  margin: 0 0 1em !important;
}

.ui .fields {
  margin: 0 -.5em 0 !important;
}

.ui .form .field .checkbox {
  margin-top: 1em;
}

/*#########################################*/
/* Notifications */
/*#########################################*/

.notifications.container {
    top: 15px;
    right: 15px;
    width: 375px;
    position: absolute;
}
.notification {
    margin: 5px;
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
}
.notification.ng-enter {
    -webkit-animation: notification-show 0.15s cubic-bezier(0.175, 0.885, 0.32, 1.27499);
}
.notification.ng-leave {
    -webkit-animation: notification-hide .10s cubic-bezier(.34, .07, 1, .2), notification-shrink .24s .12s cubic-bezier(0.5, 0, 0, 1);
    -webkit-animation-fill-mode: forwards;
}
@-webkit-keyframes notification-show {
    0% {
        opacity: 0;
        transform: perspective(350px) translate(0, -30px) rotateX(90deg);
    }
    100% {
        opacity: 1;
        transform: perspective(350px) translate(0, 0) rotateX( 0deg);
    }
}
@-webkit-keyframes notification-hide {
    0% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(.5);
    }
}
@-webkit-keyframes notification-shrink {
    0% {
        opacity: 0;
        max-height: 70px;
    }
    100% {
        opacity: 0;
        max-height: 0;
    }
}

/*#########################################*/
/* Dropdown Menus */
/*#########################################*/

.dropdown .menu.visible-add-active {
    -webkit-animation: dropdown-show 0.16s cubic-bezier(0.175, 0.885, 0.32, 1.27499);
    -webkit-transform-origin: center top;
}

.dropbox .menu.hidden-add-active {
    -webkit-animation: dropdown-show 0.16s cubic-bezier(.34, .07, 1, .2);
}

@-webkit-keyframes dropdown-show {
    0% {
        opacity: 0;
        transform: perspective(650px) translate(0, -30px);
    }
    100% {
        opacity: 1;
        transform: perspective(650px) translate(0, 0);
    }
}

@-webkit-keyframes dropdown-hide {
    0% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(.5);
    }
}

.popup {
    position: absolute;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    -webkit-transform-origin: center center;
    background-color: rgba(255, 255, 255, 0.5);
}

.popup .content h2 {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-left: -125px !important;
    margin-top: -25px !important;
    -webkit-animation: dragdrop 1s ease-in-out infinite;
}

.popup.ng-enter {
    -webkit-animation: dragdrop-in 0.12s ease-out;
}

.popup.ng-leave {
    -webkit-animation: dragdrop-out 0.24s cubic-bezier(0.175, 0.885, 0.32, 1.27499);
}

@-webkit-keyframes dragdrop {
    0% {
        transform: rotateZ(6deg);
    }
    50% {
        transform: rotateZ(-6deg);
    }
    100% {
        transform: rotateZ(6deg);
    }
}

@-webkit-keyframes dragdrop-in {
    0% {
        opacity: 0;
        transform: scale(1.2);
    }
    100% {
        opacity: 1;
        transform: scale(1);
    }
}

@-webkit-keyframes dragdrop-out {
    0% {
        opacity: 1;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(1.2);
    }
}

